e2e/pods/restart-policy/00-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: restart-never
status:
  phase: Succeeded
