e2e/pods/restart-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restart-policy
spec:
  steps:
  - catch:
    - podLogs:
        name: restart-never
        tail: 20
    name: step-00
    try:
    - apply:
        file: 00-install.yaml
    - assert:
        file: 00-assert.yaml
  - catch:
    - podLogs:
        name: restart-onfailure
        tail: 20
    name: step-01
    try:
    - apply:
        file: 01-install.yaml
    - script:
        content: |
          set -e
          count=$(kubectl get pod restart-onfailure -n $NAMESPACE -o jsonpath='{.status.containerStatuses[0].restartCount}')
          test "$count" -gt 0
  - catch:
    - podLogs:
        name: restart-always
        tail: 20
    name: step-02
    try:
    - apply:
        file: 02-install.yaml
    - script:
        content: |
          set -e
          count=$(kubectl get pod restart-always -n $NAMESPACE -o jsonpath='{.status.containerStatuses[0].restartCount}')
          test "$count" -gt 0
